--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.appepsa.MainActivity"
+            android:name="com.example.appepsa.PerfilUsuarioMainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,19 +23,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.appepsa.CadastroActivity"
+            android:name="com.example.appepsa.PerfilUsuarioCadastro"
             android:label="@string/title_activity_cadastro" >
         </activity>
         <activity
-            android:name="com.example.appepsa.MenuAlunoeFuncionario"
+            android:name="com.example.appepsa.PerfilUsuarioMenuAlunoFuncionario"
             android:label="@string/title_activity_menu" >
         </activity>
         <activity
-            android:name="com.example.appepsa.RecuperarSenhaMainActivity"
+            android:name="com.example.appepsa.PerfilUsuarioRecuperarSenha"
             android:label="@string/title_activity_recuperar_senha_main" >
         </activity>
         <activity
-            android:name="com.example.appepsa.MenuUsuarioComum"
+            android:name="com.example.appepsa.PerfilUsuarioMenuUsuarioComum"
             android:label="@string/title_activity_menu_usuario_comum" >
         </activity>
         <activity
